# mindocr

./: .flake8  .pre-commit-config.yaml  pylintrc
.github/workflows/: ci.yml  cpplint.yml
deploy/cpp_infer/src/: CMakeLists.txt  build.sh  main.cpp
deploy/cpp_infer/src/ascend_base/blocking_queue/: blocking_queue.h
deploy/cpp_infer/src/ascend_base/command_parser/: command_parser.cpp  command_parser.h
deploy/cpp_infer/src/ascend_base/config_parser/: config_parser.cpp  config_parser.h
deploy/cpp_infer/src/ascend_base/framework/module_manager/: module_base.cpp  module_base.h  module_factory.h  module_manager.cpp  module_manager.h
deploy/cpp_infer/src/ascend_base/status_code/: status_code.h
deploy/cpp_infer/src/modules/crnn_post/: crnn_post.cpp  crnn_post.h
deploy/cpp_infer/src/modules/data_type/: constant.h  data_type.h
deploy/cpp_infer/src/modules/dbnet_post/: dbnet_post.cpp  dbnet_post.h
deploy/cpp_infer/src/modules/processors/cls_infer_process/: cls_infer_process.cpp  cls_infer_process.h
deploy/cpp_infer/src/modules/processors/cls_post_process/: cls_post_process.cpp  cls_post_process.h
deploy/cpp_infer/src/modules/processors/cls_pre_process/: cls_pre_process.cpp  cls_pre_process.h
deploy/cpp_infer/src/modules/processors/collect_process/: collect_process.cpp  collect_process.h
deploy/cpp_infer/src/modules/processors/crnn_infer_process/: crnn_infer_process.cpp  crnn_infer_process.h
deploy/cpp_infer/src/modules/processors/crnn_post_process/: crnn_post_process.cpp  crnn_post_process.h
deploy/cpp_infer/src/modules/processors/crnn_pre_process/: crnn_pre_process.cpp  crnn_pre_process.h
deploy/cpp_infer/src/modules/processors/dbnet_infer_process/: dbnet_infer_process.cpp  dbnet_infer_process.h
deploy/cpp_infer/src/modules/processors/dbnet_post_process/: dbnet_post_process.cpp  dbnet_post_process.h
deploy/cpp_infer/src/modules/processors/dbnet_pre_process/: dbnet_pre_process.cpp  dbnet_pre_process.h
deploy/cpp_infer/src/modules/processors/hand_out_process/: hand_out_process.cpp  hand_out_process.h
deploy/cpp_infer/src/modules/profile/: profile.cpp  profile.h
deploy/cpp_infer/src/modules/utils/: utils.cpp  utils.h
